@@ -2,7 +2,10 @@ package id.ac.ui.cs.advprog.papikosbe.service.transaction;
 
 import id.ac.ui.cs.advprog.papikosbe.factory.WalletFactory;
 import id.ac.ui.cs.advprog.papikosbe.model.transaction.Wallet;
+import id.ac.ui.cs.advprog.papikosbe.model.user.Tenant;
+import id.ac.ui.cs.advprog.papikosbe.model.user.User;
 import id.ac.ui.cs.advprog.papikosbe.repository.transaction.WalletRepository;
+import id.ac.ui.cs.advprog.papikosbe.repository.user.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,10 +14,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -32,30 +32,41 @@ class WalletServiceImplTest {
     @Mock
     WalletFactory walletFactory;
 
+    @Mock
+    UserRepository userRepository;
+
     Wallet wallet;
-    UUID userId;
+    User user;
 
     @BeforeEach
     void setUp() {
-        userId = UUID.randomUUID();
-        wallet = new Wallet(UUID.randomUUID(), userId, BigDecimal.ZERO); // manual, bukan dari factory
+        UUID walletId = UUID.randomUUID();
+
+        user = Tenant.builder()
+                .email("nae@example.com")
+                .password("securepass123")
+                .build();
+        user.setId(walletId);
+
+        wallet = new Wallet(user, new BigDecimal("100.00"));
+        wallet.setId(walletId);
     }
 
     @Test
     void testCreateWallet() {
-        when(walletFactory.createWallet(userId)).thenReturn(wallet);
-        when(walletRepository.create(any(Wallet.class))).thenReturn(wallet);
+        when(userRepository.findById(user.getId())).thenReturn(Optional.of(user));
+        when(walletFactory.createWallet(user)).thenReturn(wallet);
+        when(walletRepository.save(any(Wallet.class))).thenReturn(wallet);
 
-        Wallet createdWallet = walletService.create(userId);
+        Wallet createdWallet = walletService.create(user.getId());
 
         assertNotNull(createdWallet);
-        assertEquals(userId, createdWallet.getUserId());
+        assertEquals(user, createdWallet.getUser());
     }
 
     @Test
     void testFindAllWallets() {
-        Iterator<Wallet> walletIterator = Collections.singletonList(wallet).iterator();
-        when(walletRepository.findAll()).thenReturn(walletIterator);
+        when(walletRepository.findAll()).thenReturn(List.of(wallet));
 
         var wallets = walletService.findAll();
 
@@ -76,23 +87,30 @@ class WalletServiceImplTest {
 
     @Test
     void testEditWallet() {
-        when(walletRepository.findById(wallet.getId())).thenReturn(Optional.of(wallet));
+        UUID walletId = wallet.getId();
 
-        Wallet updatedWallet = new Wallet(wallet.getId(), userId, new BigDecimal("500.00"));
+        when(walletRepository.findById(walletId)).thenReturn(Optional.of(wallet));
+        when(walletRepository.save(any(Wallet.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        Wallet editedWallet = walletService.edit(wallet.getId(), updatedWallet);
+        Wallet updatedWallet = new Wallet(user, new BigDecimal("500.00"));
+        updatedWallet.setId(walletId);
+
+        Wallet editedWallet = walletService.edit(walletId, updatedWallet);
 
         assertNotNull(editedWallet);
         assertEquals(new BigDecimal("500.00"), editedWallet.getBalance());
     }
 
+
     @Test
     void testDeleteWallet() {
         UUID walletId = wallet.getId();
-        doNothing().when(walletRepository).delete(walletId);
+
+        doNothing().when(walletRepository).deleteById(walletId);
 
         walletService.delete(walletId);
 
-        verify(walletRepository, times(1)).delete(walletId);
+        verify(walletRepository, times(1)).deleteById(walletId);
     }
+
 }
